Fix accent color in dark mode

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -351,4 +351,8 @@ input[type=checkbox]:checked ~ .menu-label:after {
     a:hover > code  {
         background-color: #66D9EF;
     }
+
+    .accent {
+        color: #F92672;
+    }
 }
